# Resumarq

./: .editorconfig  .env.example  .gitignore  README.md
agent-server/: .env.example  README.md  pyproject.toml
agent-server/app/: __init__.py  config.py  db.py  db_writes.py  main.py  models.py  tasks.py
agent-server/app/services/: __init__.py  s3.py
agent-server/graph/: __init__.py  builder.py  compiler.py  llm.py  state.py
agent-server/graph/nodes/: __init__.py  ats_audit.py  critic.py  gap_analysis.py  impact_audit.py  jd_parser.py  resume_parser.py
agent-server/prompts.example/: ats_audit.py  critic.py  resume_analysis.py
agent-server/prompts_example/: __init__.py  gap_analysis.py  impact_audit.py  jd_parser.py
agent-server/schemas/: __init__.py  jd.py  results.py  resume.py
web/: .env.example  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  proxy.ts  setup-db.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: layout-client.tsx  layout.tsx  page.tsx
web/app/demo/: layout-client.tsx  layout.tsx  page.tsx
web/app/email-verified/: page.tsx
web/app/forgot-password/: page.tsx
web/app/reset-password/: page.tsx
web/app/sign-in/: page.tsx
web/app/sign-up/: page.tsx
web/components/: theme-toggle.tsx
web/components/dashboard/: ats-rules-table.tsx  bullet-audit-card.tsx  score-ring.tsx  (+4 more)
web/inngest/: client.ts  functions.ts
web/lib/: auth-client.ts  auth.ts  db.ts  demo-data.ts  email.ts  password-validation.ts  razorpay.ts  recruiter-session.ts  s3.ts  session.ts
web/types/: analysis.ts  resume.ts
(+25 files in other folders)
