[project]
name = "resumarq-agent-server"
version = "0.1.0"
description = "AI agent pipeline server for Resumarq"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.58",
    "fastapi[standard]>=0.133.1",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.9",
    "pydantic-settings>=2.13.1",
    "motor>=3.7.0",
    "pymupdf>=1.27.1",
    "uvicorn>=0.41.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
